# docs/swagger.json
@@ -2279,11 +2279,12 @@
                 "summary": "List the user's subscriptions",
                 "responses": {
                     "200": {
-                        "description": "OK",
+                        "description": "List of simplified subscriptions",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.Subscription"
+                                "type": "object",
+                                "additionalProperties": true
                             }
                         }
                     },
